[package]
name = "test_validators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2"
rand_chacha = "0.3"
anyhow = "1"
async-trait = "0.1.81"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"

rand = "0.8"
futures-util = "0.3.30"



[dependencies.tokio-util]
version = "0.7"
features = [ "codec" ]

[dependencies.snarkos-account]
git = "ssh://git@github.com/AleoNet/snarkOS.git"
branch = "mainnet-staging"

[dependencies.snarkos-node-bft]
git = "ssh://git@github.com/AleoNet/snarkOS.git"
branch = "mainnet-staging"

[dependencies.snarkos-node-bft-ledger-service]
git = "ssh://git@github.com/AleoNet/snarkOS.git"
branch = "mainnet-staging"

[dependencies.snarkos-node-tcp]
git = "ssh://git@github.com/AleoNet/snarkOS.git"
branch = "mainnet-staging"

[dependencies.snarkos-node-bft-events]
git = "ssh://git@github.com/AleoNet/snarkOS.git"
branch = "mainnet-staging"

[dependencies.snarkvm]
git = "ssh://git@github.com/AleoNet/snarkVM.git"
branch = "mainnet-staging"
features = ["console"]


[patch."https://github.com/AleoNet/snarkVM"]
snarkvm = { git = "ssh://git@github.com/AleoNet/snarkVM.git", branch = "mainnet-staging"}
